# artistic

./: .gitignore  Cargo.toml  LICENSE  README.md
.sqlx/: query-01233dfa012d664454e6d30148775ba5c52a9ebadc861c0c72c277d6863ac7ec.json  query-04626e773c445659b710c403f8147463331ed8a7ef6954ac92c954bb80f001ff.json  query-04913d531ec489279a5e2612490e0ff10e351573f104bfdf83ac3eeb30efbed8.json  query-4705d57dec8ea435ca81309512c66ea6fe4d6c399e20167f2116df81fa65490a.json  query-49ba1bf13bc05a40d586cab5b01ddffb65e0dc76ce5673e93b178a2d878146aa.json  query-51c7ce4941bf4026da5d72897a35dbe38f1a5e5ad055fcef629cd989f718cc0f.json  query-6166e7cb587f26d3f5056a9055aa14cbc9858e624716f5db6d3b7069057ec171.json  query-6aac756cef8f6d7d2592b77113a4ea70a8e8d674730320f2b5f168494382f064.json  query-6ad5ad6e49c8cf652c9d3a58464505df35a0ba601c39b6183cf00a941efa02ac.json  query-731c8b545100d28098607ed8e4a49830c14f03e2a765bf83419f04ef1a1a53e1.json  query-83c002ebf498022bc3e28e5ccf4cc931a5be72260e6c43a2c5ea743898f82f76.json  query-c488cd5e78f031c02650c5d56cc928ced100099166a250b44468d53369f5bd36.json  query-cefa1af3a8f41cfedb508eaa5e20ce4c10a7affa42fdae7b8fde4a7741d560b3.json  query-f3dfe7fda56541a7646c86e91fdeda6c829407f0e4160dee6375daeeecdc8773.json
assets/: create-tables.sql  default-config.toml
src/: commands.rs  config.rs  database.rs  handlers.rs  init_tracing.rs  main.rs  types.rs  util.rs
