[package]
name = "artistic"
version = "0.1.1"
authors = ["monnocat"]
edition = "2024"
description = "A discord for artist feature automation in the official C418 guild"
repository = "https://github.com/monnocat/artistic"
license = "MIT"

[dependencies]
chrono = "0.4.41"
color-eyre = { version = "0.6.5", default-features = false }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.31"
itertools = "0.14.0"
nu-ansi-term = "0.50.1"
poise = "0.6.1"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
incremental = false
strip = true
panic = "abort"
